Moving to production.

--- a/pilot/login.html
+++ b/pilot/login.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
       <title>MengoMengo: Social TV</title>
       <link rel="stylesheet" type="text/css" href="styles.css"/>
+      <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   </head>
   <body id="landing">
     <div class="left">
@@ -14,18 +15,8 @@
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
       <div class="fb-login-button">
-        <fb:login-button size="xlarge">Connect with Facebook</fb:login-button>
+        <img src="facebook_orange.jpg" style="cursor: pointer;"/>
       </div>
     </div> 
-    <div id="fb-root"></div>
-    <script src="http://connect.facebook.net/en_US/all.js"></script>
-    <script>
-      FB.init({
-        appId  : '204128796282802',
-        status : true, // check login status
-        cookie : true, // enable cookies to allow the server to access the session
-        xfbml  : true  // parse XFBML
-      });
-    </script>
   </body>
 </html>
